--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,7 +1,7 @@
 pipeline {
     agent any
     stages {
-        stage('Build') {
+        stage('BuildStep') {
             steps {
                 bat label: '', script: '''mvn clean install -DskipTests=false'''
             }
